# CLionProjects

./: .gitignore  CMakeLists.txt  main.cpp
file/: file.cpp  file.cppm
helloworld/: helloworld.cppm
hex/: hex.cpp
os/: os.cpp  os.cppm
zip/Cpp20Module-main/: Cpp20Modules.cpp  Cpp20Modules.vcxproj  Cpp20Modules.vcxproj.filters  MyTemplate.vstemplate  README.md
zip/Cpp20Module-main/HEADERS/: Cpp20Modules_Headers.ixx
zip/Cpp20Module-main/HELLO/: Hello.ixx
